# dtk-core

./: .gitignore  CHANGES.md  CMakeLists.txt  LICENSE.md  bld.bat
cmake/: CodeCoverage.cmake  Coverage.cmake  dtkCoreConfig.cmake.in  dtkCoreConfig.install.cmake.in  dtkCoreConfigVersion.cmake.in
pkg/env/: dtk-core.yaml
pkg/recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
pkg/recipes/: #meta.yaml#  build.sh  meta.yaml
src/: CMakeLists.txt
src/dtkCore/: .#dtkMetaType.tpp  CMakeLists.txt  dtkCore  dtkCoreApplication  dtkCoreApplication.cpp  dtkCoreApplication.h  dtkCoreApplication_p  dtkCoreApplication_p.h  dtkCoreAsKeyValueRange  dtkCoreAsKeyValueRange.h  dtkCoreConfig  dtkCoreConfig.h.in  dtkCoreIOCompressor  dtkCoreIOCompressor.cpp  dtkCoreIOCompressor.h  dtkCoreIODevice.cpp  dtkCoreIODevice.h  dtkCoreLayerManager.cpp  dtkCoreLayerManager.h  dtkCoreMetaContainerSequential  dtkCoreMetaContainerSequential.cpp  dtkCoreMetaContainerSequential.h  dtkCoreMetaContainerSequential.tpp  dtkCoreMetaContainerSequentialHandler  dtkCoreMetaContainerSequentialHandler.h  dtkCoreMetaContainerSequentialHandler.tpp  dtkCoreMetaType.cpp  dtkCoreMetaType.h  dtkCoreMetaType.tpp  dtkCoreObjectManager  dtkCoreObjectManager.cpp  dtkCoreObjectManager.h  dtkCoreParameter.cpp  dtkCoreParameter.h  dtkCoreParameter.tpp  dtkCoreParameterCollection  dtkCoreParameterCollection.cpp  dtkCoreParameterCollection.h  dtkCoreParameterFile  dtkCoreParameterFile.cpp  (+74 more)
src/dtkCoreRuntime/: CMakeLists.txt  dtkCoreRuntimeApplication  dtkCoreRuntimeApplication.cpp  dtkCoreRuntimeApplication.h
tst/: CMakeLists.txt  dtkCoreTest  dtkCoreTest.h
tst/dtkCore/: CMakeLists.txt  dtkCore.qrc  dtkCoreAsKeyValueRangeTest.cpp  dtkCoreAsKeyValueRangeTest.h  dtkCoreIOCompressorTest.cpp  dtkCoreIOCompressorTest.h  dtkCoreMetaContainerSequentialTest.cpp  dtkCoreMetaContainerSequentialTest.h  dtkCoreMetaContainerSequentialTest.tpp  dtkCoreMetaTypeTest.cpp  dtkCoreMetaTypeTest.h  dtkCoreParameterReaderTest.cpp  dtkCoreParameterReaderTest.h  dtkCoreParameterTest.cpp  dtkCoreParameterTest.h  dtkCorePluginFactoryTest.cpp  dtkCorePluginFactoryTest.h  dtkCoreSettingsTest.cpp  dtkCoreSettingsTest.h  dtkMetaTypeTest.cpp  dtkMetaTypeTest.h
tst/dtkCoreLayerTest/: CMakeLists.txt
tst/dtkCoreLayerTest/cmake/: dtkCoreLayerTestConfig.cmake.in  dtkCoreLayerTestConfig.install.cmake.in  dtkCoreLayerTestConfigVersion.cmake.in
tst/dtkCoreLayerTest/plugins/: CMakeLists.txt
tst/dtkCoreLayerTest/plugins/dtkCoreConceptFooPlugin/: CMakeLists.txt  dtkCoreConceptFoo.cpp  dtkCoreConceptFoo.h  dtkCoreConceptFooPlugin.cpp  dtkCoreConceptFooPlugin.h  dtkCoreConceptFooPlugin.json  dtkCoreConceptFooWidget.cpp  dtkCoreConceptFooWidget.h  dtkCoreConceptFoo_p.cpp  dtkCoreConceptFoo_p.h
tst/dtkCoreLayerTest/src/: CMakeLists.txt  dtkAbstractCoreConcept  dtkAbstractCoreConcept.cpp  dtkAbstractCoreConcept.h  dtkCoreLayerTest  dtkCoreLayerTest.cpp  dtkCoreLayerTest.h  dtkCoreLayerTestConfig.h.in  dtkCoreLayerTestSettings  dtkCoreLayerTestSettings.cpp  dtkCoreLayerTestSettings.h
tst/resources/: parameters_baddef.json  parameters_def.json
