## Version: $Id$
##
######################################################################
##
### Commentary:
##
######################################################################
##
### Change Log:
##
######################################################################
##
### Code:

add_subdirectory(src)
add_subdirectory(plugins)

######################################################################
### CMakeLists.txt ends here
