## Version: $Id$
##
######################################################################
##
### Commentary:
##
######################################################################
##
### Change Log:
##
######################################################################
##
### Code:

add_subdirectory(dtkCoreConceptFooPlugin)

######################################################################
### CMakeLists.txt ends here
